--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <!-- ===================== META TAGS ESSENCIAIS ===================== -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciência News</title>
     <meta name="description" content="Ciência News: Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos.">
     <link rel="canonical" href="https://canalciencianews.github.io/">
 
-    <!-- ===================== SCHEMA.ORG PARA SEO ===================== -->
+    <!-- Schema.org -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -26,13 +25,13 @@
     }
     </script>
 
-    <!-- ===================== ICONE DO BOOTSTRAP (APENAS ICONES) ===================== -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
-    <!-- ===================== CSS PRINCIPAL ===================== -->
+    <!-- CSS Principal -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- ===================== JS PRINCIPAL ===================== -->
+    <!-- JS Principal -->
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -40,19 +39,19 @@
     <!-- ===================== HEADER ===================== -->
     <header>
         <div class="container-header">
-            <!-- Logo -->
-            <div class="logo">
-                Ciência News
+            <div class="logo">Ciência News</div>
+            <div class="menu-toggle" id="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-
-            <!-- Menu de navegação -->
             <nav>
-                <ul class="menu">
-                    <li><a href="https://canalciencianews.github.io/index.html">Home</a></li>
-                    <li><a href="https://canalciencianews.github.io/pesquisa.html">Pesquisa</a></li>
-                    <li><a href="https://canalciencianews.github.io/tecnologia.html">Tecnologia</a></li>
-                    <li><a href="https://canalciencianews.github.io/espaco.html">Espaço</a></li>
-                    <li><a href="https://canalciencianews.github.io/contato.html">Contato</a></li>
+                <ul class="menu" id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pesquisa.html">Pesquisa</a></li>
+                    <li><a href="tecnologia.html">Tecnologia</a></li>
+                    <li><a href="espaco.html">Espaço</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,82 +59,117 @@
 
     <!-- ===================== HERO ===================== -->
     <section class="hero">
-        <div class="container-hero">
-            <h1>Ciência News</h1>
-            <p class="bordao">Uma pílula com notícias sobre ciências</p>
-        </div>
+        <h1>Ciência News</h1>
+        <p class="bordao">Uma pílula com notícias sobre ciências</p>
     </section>
 
     <!-- ===================== MAIN ===================== -->
     <main>
-    <!-- Início do Main -->
+        <!-- ===================== CARDS DE DESTAQUES ===================== -->
+        <section class="cards-container">
+            <!-- Card editável 1 -->
+            <div class="card">
+                <img src="https://source.unsplash.com/400x200/?science" alt="Destaque 1">
+                <div class="card-body">
+                    <h3>Título da Matéria 1</h3>
+                    <p>Pequena descrição da matéria, até 150 caracteres para resumo rápido.</p>
+                    <a href="artigo1.html">Leia mais →</a>
+                </div>
+            </div>
 
-        <!-- Seção de Destaques / Conteúdos exclusivos -->
-        <section class="destaques">
-            <div class="container-destaques">
-                <h2>Destaques</h2>
-                <div class="grid-cards">
+            <!-- Card editável 2 -->
+            <div class="card">
+                <img src="https://source.unsplash.com/400x200/?space" alt="Destaque 2">
+                <div class="card-body">
+                    <h3>Título da Matéria 2</h3>
+                    <p>Pequena descrição da matéria, até 150 caracteres para resumo rápido.</p>
+                    <a href="artigo2.html">Leia mais →</a>
+                </div>
+            </div>
 
-                    <!-- Card exemplo de conteúdo exclusivo -->
-                    <div class="card">
-                        <img src="https://source.unsplash.com/400x200/?science" alt="Destaque 1">
-                        <div class="card-content">
-                            <h3>Descoberta em Física Quântica</h3>
-                            <p>Pesquisadores revelam resultados que podem mudar a ciência moderna.</p>
-                            <a href="conteudo1.html">Leia mais →</a>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <img src="https://source.unsplash.com/400x200/?space" alt="Destaque 2">
-                        <div class="card-content">
-                            <h3>Exploração Espacial</h3>
-                            <p>Missões recentes trazem descobertas inéditas sobre planetas e asteroides.</p>
-                            <a href="conteudo2.html">Leia mais →</a>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <img src="https://source.unsplash.com/400x200/?ai" alt="Destaque 3">
-                        <div class="card-content">
-                            <h3>Inteligência Artificial na Medicina</h3>
-                            <p>Novos algoritmos ajudam diagnósticos complexos de forma mais rápida.</p>
-                            <a href="conteudo3.html">Leia mais →</a>
-                        </div>
-                    </div>
-
+            <!-- Card editável 3 -->
+            <div class="card">
+                <img src="https://source.unsplash.com/400x200/?ai" alt="Destaque 3">
+                <div class="card-body">
+                    <h3>Título da Matéria 3</h3>
+                    <p>Pequena descrição da matéria, até 150 caracteres para resumo rápido.</p>
+                    <a href="artigo3.html">Leia mais →</a>
                 </div>
             </div>
         </section>
 
-    <!-- Fim do Main -->
+        <!-- ===================== BANNER EDITÁVEL ===================== -->
+        <section class="banner-container">
+            <div class="banner">
+                <p>Espaço para banner publicitário ou promoção. <span class="destaque">Clique aqui para editar</span></p>
+            </div>
+        </section>
+
+        <!-- ===================== FEED DE OUTROS SITES ===================== -->
+        <section class="feed-container">
+            <h2>Notícias de outros sites</h2>
+            <div class="feed-items">
+                <div class="feed-item">
+                    <img src="https://source.unsplash.com/200x100/?lab" alt="Feed 1">
+                    <p>Resumo da notícia 1 com até 100 caracteres.</p>
+                </div>
+                <div class="feed-item">
+                    <img src="https://source.unsplash.com/200x100/?robot" alt="Feed 2">
+                    <p>Resumo da notícia 2 com até 100 caracteres.</p>
+                </div>
+                <div class="feed-item">
+                    <img src="https://source.unsplash.com/200x100/?planet" alt="Feed 3">
+                    <p>Resumo da notícia 3 com até 100 caracteres.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- ===================== SOBRE ===================== -->
+        <section class="sobre-container">
+            <h2>Sobre</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
     </main>
 
     <!-- ===================== RODAPÉ ===================== -->
     <footer>
-        <div class="container-footer">
-            <!-- Copyright -->
-            <div class="copyright">
-                &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
-            </div>
-
-            <!-- Links institucionais ou legais -->
-            <div class="links-footer">
-                <a href="#">Política de Privacidade</a>
-                <a href="#">Termos de Uso</a>
-                <a href="#">Contato</a>
-            </div>
-
-            <!-- Redes sociais -->
-            <div class="social-footer">
-                <a href="https://www.youtube.com/ciencianews1" target="_blank"><i class="bi bi-youtube"></i></a>
-                <a href="https://www.facebook.com/ciencianews1" target="_blank"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.kwai.com/ciencianews" target="_blank"><i class="bi bi-people"></i></a>
-                <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
-            </div>
+        <div class="social-icons">
+            <a href="https://www.youtube.com/ciencianews1" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.facebook.com/ciencianews1" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.kwai.com/ciencianews" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Kwai_logo_2020.svg" alt="Kwai" style="width: 24px; height: 24px;"></a>
+            <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
+        </div>
+        <div class="links-footer">
+            <a href="#">Política de Privacidade</a>
+            <a href="#">Termos de Uso</a>
+            <a href="#">Contato</a>
+        </div>
+        <div class="copyright">
+            &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
         </div>
     </footer>
 
+    <!-- ===================== JS MENU MOBILE ===================== -->
+    <script>
+        const toggle = document.getElementById('menu-toggle');
+        const menu = document.getElementById('menu');
+        toggle.addEventListener('click', () => {
+            menu.classList.toggle('active');
+        });
+
+        /* ===================== FEED DINÂMICO ===================== */
+        const feedItems = document.querySelectorAll('.feed-item');
+        let feedIndex = 0;
+        function showFeed() {
+            feedItems.forEach((item, i) => {
+                item.style.display = i === feedIndex ? 'flex' : 'none';
+            });
+            feedIndex = (feedIndex + 1) % feedItems.length;
+        }
+        setInterval(showFeed, 5000); // troca a cada 5s
+        showFeed();
+    </script>
+
 </body>
-</html>
+                                                                                               </html>
