--- a/ferramentas-antigas.html
+++ b/ferramentas-antigas.html
@@ -5,11 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ciência News - Ferramentas de Pedra do Quênia</title>
   <meta name="description" content="Ferramentas de pedra de 400 mil anos encontradas no Quênia revelam engenhosidade dos primeiros humanos.">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="logo.png" type="image/png">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="logo.png" type="image/png">
-</head>
+
+  <!-- Thumbnail / Open Graph / Social Media -->
+  <meta property="og:title" content="Ferramentas de pedra de 400 mil anos no Quênia">
+  <meta property="og:description" content="Arqueólogos descobriram ferramentas de pedra sofisticadas no Quênia, datadas de cerca de 400 mil anos.">
+  <meta property="og:image" content="thumbnail-ferramentas-antigas.jpg">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://canalciencianews.github.io/ferramentas-antigas.html">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ferramentas de pedra de 400 mil anos no Quênia">
+  <meta name="twitter:description" content="Arqueólogos descobriram ferramentas de pedra sofisticadas no Quênia, datadas de cerca de 400 mil anos.">
+  <meta name="twitter:image" content="thumbnail-ferramentas-antigas.jpg">
+    </head>
 <body>
 
   <!-- ===================== HEADER ===================== -->
