--- a/ferramentas-antigas.html
+++ b/ferramentas-antigas.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Ferramentas de pedra de 400 mil anos encontradas no Quênia revelam engenhosidade dos primeiros humanos.">
   
   <!-- Favicon -->
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" href="https://canalciencianews.github.io/logo.png" type="image/png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
   <!-- Thumbnail / Open Graph / Social Media -->
   <meta property="og:title" content="Ferramentas de pedra de 400 mil anos no Quênia">
   <meta property="og:description" content="Arqueólogos descobriram ferramentas de pedra sofisticadas no Quênia, datadas de cerca de 400 mil anos.">
-  <meta property="og:image" content="thumbnail-ferramentas-antigas.jpg">
+  <meta property="og:image" content="https://canalciencianews.github.io/thumbnail-ferramentas-antigas.jpg">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://canalciencianews.github.io/ferramentas-antigas.html">
 
@@ -26,8 +26,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Ferramentas de pedra de 400 mil anos no Quênia">
   <meta name="twitter:description" content="Arqueólogos descobriram ferramentas de pedra sofisticadas no Quênia, datadas de cerca de 400 mil anos.">
-  <meta name="twitter:image" content="thumbnail-ferramentas-antigas.jpg">
-    </head>
+  <meta name="twitter:image" content="https://canalciencianews.github.io/thumbnail-ferramentas-antigas.jpg">
+</head>
 <body>
 
   <!-- ===================== HEADER ===================== -->
