--- a/caçadores-cosmicos.html
+++ b/caçadores-cosmicos.html
@@ -16,17 +16,22 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
   <!-- Open Graph / Social Media -->
-  <meta property="og:title" content="Caçadores de Fantasmas Cósmicos: Detecção de Matéria Escura">
-  <meta property="og:description" content="Pesquisadores da Universidade de Copenhague propõem uma estratégia inovadora para detectar partículas de matéria escura observando galáxias distantes.">
-  <meta property="og:image" content="https://i.postimg.cc/Qdc4G8kP/intergalactic-experime.jpg">
-  <meta property="og:type" content="article">
-  <meta property="og:url" content="https://canalciencianews.github.io/caçadores-cosmicos.html">
+  <!-- Open Graph / Social Media -->
+<meta property="og:title" content="Caçadores de Fantasmas Cósmicos: Detecção de Matéria Escura">
+<meta property="og:description" content="Pesquisadores da Universidade de Copenhague propõem uma estratégia inovadora para detectar partículas de matéria escura observando galáxias distantes.">
+<meta property="og:image" content="cacadores-cosmicos-thumbnail.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://canalciencianews.github.io/caçadores-cosmicos.html">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Caçadores de Fantasmas Cósmicos: Detecção de Matéria Escura">
-  <meta name="twitter:description" content="Pesquisadores da Universidade de Copenhague propõem uma estratégia inovadora para detectar partículas de matéria escura observando galáxias distantes.">
-  <meta name="twitter:image" content="https://i.postimg.cc/Qdc4G8kP/intergalactic-experime.jpg">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Caçadores de Fantasmas Cósmicos: Detecção de Matéria Escura">
+<meta name="twitter:description" content="Pesquisadores da Universidade de Copenhague propõem uma estratégia inovadora para detectar partículas de matéria escura observando galáxias distantes.">
+<meta name="twitter:image" content="cacadores-cosmicos-thumbnail.jpg">
+
 </head>
 <body>
 
