--- a/nova-categoria-de-super-novas.html
+++ b/nova-categoria-de-super-novas.html
@@ -18,7 +18,7 @@
   <!-- Open Graph / Social Media -->
   <meta property="og:title" content="Nova Categoria de Supernovas: Descobertas e Implicações">
   <meta property="og:description" content="Pesquisadores identificam uma nova categoria de supernovas que podem lançar luz sobre a evolução de estrelas massivas.">
-  <meta property="og:image" content="URL_DA_THUMBNAIL_AQUI.jpg">
+  <meta property="og:image" content="nova-categoria-de-super-novas.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:type" content="image/jpeg">
