--- a/index.html
+++ b/index.html
@@ -68,34 +68,35 @@
         <!-- ===================== CARDS DE DESTAQUES ===================== -->
         <section class="cards-container">
             <!-- Card editável 1 -->
-            <div class="card">
-                <img src="https://source.unsplash.com/400x200/?science" alt="Destaque 1">
-                <div class="card-body">
-                    <h3>Título da Matéria 1</h3>
-                    <p>Pequena descrição da matéria, até 150 caracteres para resumo rápido.</p>
-                    <a href="artigo1.html">Leia mais →</a>
-                </div>
-            </div>
+<div class="card">
+    <img src="to-craft-early-tools-a.jpg" alt="Ferramentas de pedra antigas no Quênia">
+    <div class="card-body">
+        <h3>Ferramentas de Pedra de 400 mil anos no Quênia</h3>
+        <p>Descobertas arqueológicas revelam a engenhosidade dos primeiros humanos e suas habilidades avançadas de fabricação de ferramentas.</p>
+        <a href="ferramentas-antigas.html">Leia mais →</a>
+    </div>
+</div>
 
-            <!-- Card editável 2 -->
-            <div class="card">
-                <img src="https://source.unsplash.com/400x200/?space" alt="Destaque 2">
-                <div class="card-body">
-                    <h3>Título da Matéria 2</h3>
-                    <p>Pequena descrição da matéria, até 150 caracteres para resumo rápido.</p>
-                    <a href="artigo2.html">Leia mais →</a>
-                </div>
-            </div>
+<!-- Card editável 2 -->
+<div class="card">
+    <img src="https://i.postimg.cc/Qdc4G8kP/intergalactic-experime.jpg" alt="Representação artística de axions no espaço">
+    <div class="card-body">
+        <h3>Caçadores de Fantasmas Cósmicos</h3>
+        <p>Cientistas observam galáxias distantes em busca de sinais de partículas de matéria escura, abrindo novas perspectivas sobre o universo.</p>
+        <a href="caçadores-cosmicos.html">Leia mais →</a>
+    </div>
+</div>
+
 
             <!-- Card editável 3 -->
-            <div class="card">
-                <img src="https://source.unsplash.com/400x200/?ai" alt="Destaque 3">
-                <div class="card-body">
-                    <h3>Título da Matéria 3</h3>
-                    <p>Pequena descrição da matéria, até 150 caracteres para resumo rápido.</p>
-                    <a href="artigo3.html">Leia mais →</a>
-                </div>
-            </div>
+<div class="card">
+    <img src="nova-categoria-de-super-novas.jpg" alt="Categoria de Supernovas">
+    <div class="card-body">
+        <h3>Nova Categoria de Supernovas Revela Ligação com Neurônios</h3>
+        <p>Pesquisadores identificam padrões em supernovas que lembram conexões neuronais, oferecendo novas perspectivas astrofísicas.</p>
+        <a href="nova-categoria-de-super-novas.html">Leia mais →</a>
+    </div>
+</div>
         </section>
 
         <!-- ===================== BANNER EDITÁVEL ===================== -->
