--- a/caçadores-cosmicos.html
+++ b/caçadores-cosmicos.html
@@ -37,25 +37,24 @@
 
   <!-- ===================== HEADER ===================== -->
   <header>
-    <div class="container-header">
-      <div class="logo">
-        <img src="logo.jpg" alt="Ciência News" style="height: 50px;">
-      </div>
-      <div class="menu-toggle" id="menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <nav>
-        <ul class="menu" id="menu">
-          <li><a href="index.html">Início</a></li>
-          <li><a href="artigos.html">Artigos</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+        <div class="container-header">
+            <div class="logo">Ciência News</div>
+            <div class="menu-toggle" id="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav>
+                <ul class="menu" id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pesquisa.html">Pesquisa</a></li>
+                    <li><a href="tecnologia.html">Tecnologia</a></li>
+                    <li><a href="espaco.html">Espaço</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
   <!-- ===================== HERO ===================== -->
   <section class="hero">
