Update and rename caçadores-cosmicos.html to cacadores-cosmicos.html

--- a/cacadores-cosmicos.html
+++ b/cacadores-cosmicos.html
@@ -25,7 +25,7 @@
 <meta property="og:image:height" content="630">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://canalciencianews.github.io/caçadores-cosmicos.html">
+<meta property="og:url" content="https://canalciencianews.github.io/cacadores-cosmicos.html">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
