--- a/cacadores-cosmicos.html
+++ b/cacadores-cosmicos.html
@@ -17,10 +17,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
   <!-- Open Graph / Social Media -->
-  <!-- Open Graph / Social Media -->
 <meta property="og:title" content="Caçadores de Fantasmas Cósmicos: Detecção de Matéria Escura">
 <meta property="og:description" content="Pesquisadores da Universidade de Copenhague propõem uma estratégia inovadora para detectar partículas de matéria escura observando galáxias distantes.">
-<meta property="og:image" content="cacadores-cosmicos-thumbnail.jpg">
+<meta property="og:image" content="https://canalciencianews.github.io/cacadores-cosmicos-thumbnail.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:image:type" content="image/jpeg">
@@ -31,7 +30,8 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Caçadores de Fantasmas Cósmicos: Detecção de Matéria Escura">
 <meta name="twitter:description" content="Pesquisadores da Universidade de Copenhague propõem uma estratégia inovadora para detectar partículas de matéria escura observando galáxias distantes.">
-<meta name="twitter:image" content="cacadores-cosmicos-thumbnail.jpg">
+<meta name="twitter:image" content="https://canalciencianews.github.io/cacadores-cosmicos-thumbnail.jpg">
+
 
 </head>
 <body>
