--- a/ferramentas-antigas.html
+++ b/ferramentas-antigas.html
@@ -107,25 +107,23 @@
     </section>
   </main>
 
-  <!-- ===================== RODAPÉ ===================== -->
-<footer>
-  <div class="social-footer">
-    <a href="https://www.youtube.com/ciencianews1" target="_blank"><i class="bi bi-youtube"></i></a>
-    <a href="https://www.facebook.com/ciencianews1" target="_blank"><i class="bi bi-facebook"></i></a>
-    <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Kwai_logo_2020.svg" alt="Kwai" style="width: 24px; height: 24px;">
-    </a>
-    <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
-  </div>
-  <div class="links-footer">
-    <a href="#">Política de Privacidade</a>
-    <a href="#">Termos de Uso</a>
-    <a href="#">Contato</a>
-  </div>
-  <div class="copyright">
-    &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
-  </div>
-</footer>
+<!-- ===================== RODAPÉ ===================== -->
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.youtube.com/@CienciaNewsOficial" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.facebook.com/ciencianews1" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
+        </div>
+        <div class="links-footer">
+            <a href="#">Política de Privacidade</a>
+            <a href="#">Termos de Uso</a>
+            <a href="#">Contato</a>
+        </div>
+        <div class="copyright">
+            &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
+        </div>
+    </footer>
 
 
   <!-- ===================== JS MENU MOBILE ===================== -->
