--- a/nova-categoria-de-super-novas.html
+++ b/nova-categoria-de-super-novas.html
@@ -116,22 +116,22 @@
   </main>
 
   <!-- ===================== RODAPÉ ===================== -->
-  <footer>
-    <div class="social-icons">
-      <a href="https://www.youtube.com/ciencianewsoficial" target="_blank"><i class="bi bi-youtube"></i></a>
-      <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
-      <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
-    </div>
-
-    <div class="links-footer">
-      <a href="#">Política de Privacidade</a>
-      <a href="#">Termos de Uso</a>
-      <a href="#">Contato</a>
-    </div>
-    <div class="copyright">
-      &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
-    </div>
-  </footer>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.youtube.com/@CienciaNewsOficial" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.facebook.com/ciencianews1" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
+        </div>
+        <div class="links-footer">
+            <a href="#">Política de Privacidade</a>
+            <a href="#">Termos de Uso</a>
+            <a href="#">Contato</a>
+        </div>
+        <div class="copyright">
+            &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
+        </div>
+    </footer>
 
   <!-- ===================== JS MENU MOBILE ===================== -->
   <script src="script.js"></script>
