--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="card-body">
                     <h3>Caçadores de Fantasmas Cósmicos</h3>
                     <p>Cientistas observam galáxias distantes em busca de sinais de partículas de matéria escura, abrindo novas perspectivas sobre o universo.</p>
-                    <a href="caçadores-cosmicos.html">Leia mais →</a>
+                    <a href="cacadores-cosmicos.html">Leia mais →</a>
                 </div>
             </div>
 
