--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="videos.css">
+
+
+
     <!-- CSS Principal -->
     <link rel="stylesheet" href="style.css">
 
@@ -109,6 +113,16 @@
 
         <!-- ===================== FEED DE OUTROS SITES ===================== --> <section class="feed-container"> <h2>Últimas Notícias</h2> <div class="feed-items"> <!-- Card 1 --> <div class="feed-item" onclick="window.open('https://phys.org/news/2025-08-year-history-great-salt-lake.html', '_blank')" style="cursor:pointer;"> <img src="https://i.postimg.cc/7LrTjbTW/the-8000-year-history.jpg" alt="Grande Lago Salgado"> <div class="feed-text"> <h3>A história de 8.000 anos registrada nos sedimentos do Grande Lago Salgado</h3> <p>Nos últimos 8.000 anos, o Grande Lago Salgado de Utah tem sido sensível a mudanças climáticas e ao fluxo de água. Agora, novos dados de isótopos de sedimentos indicam que a atividade humana nos últimos 200 anos levou o lago a um estado biogeoquímico não visto há pelo menos 2.000 anos.</p> </div> </div> <!-- Card 2 --> <div class="feed-item" onclick="window.open('https://phys.org/news/2025-08-human-embryo-implantat.html', '_blank')" style="cursor:pointer;"> <img src="https://i.postimg.cc/1tfnq6x4/human-embryo-implantat.jpg" alt="Implantação de Embriões"> <div class="feed-text"> <h3>Implantação de embriões humanos registrada em tempo real pela primeira vez</h3> <p>Pesquisadores do Instituto de Bioengenharia da Catalunha (IBEC), em colaboração com o Hospital Universitário Dexeus, capturaram imagens inéditas da implantação de um embrião humano. Esta é a primeira vez que o processo é registrado em tempo real e em 3D.</p> </div> </div> <!-- Card 3 --> <div class="feed-item" onclick="window.open('https://phys.org/news/2025-08-human-protein-ace2-modulation-entry.html', '_blank')" style="cursor:pointer;"> <img src="https://i.postimg.cc/xCCH3hmf/study-reveals-how-huma.jpg" alt="Proteína ACE2"> <div class="feed-text"> <h3>Como a modulação da proteína ACE2 humana pode impedir a entrada do coronavírus</h3> <p>No início da pandemia, a maioria das pesquisas, incluindo a nossa, concentrou-se em desenvolver medicamentos que pudessem bloquear a proteína spike do vírus. Este foi um primeiro passo lógico, mas, como vimos, o vírus é um alvo em movimento.</p> </div> </div> </div> </section>
 
+        <!-- ===================== VÍDEOS DO CANAL ===================== -->
+
+        <section id="videos-section">
+    <h2>Meus Vídeos</h2>
+    <div id="videos-container" class="videos-container">
+        <!-- Cards serão gerados pelo JS -->
+    </div>
+</section>
+
+        
        <!-- ===================== SOBRE FULL WIDTH ===================== -->
 <section class="sobre-container full-width">
     <div class="sobre-box">
@@ -142,5 +156,6 @@
             &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
         </div>
     </footer>
+        <script src="videos.js"></script>
 </body>
 </html>
