--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- ===================== VÍDEOS DO CANAL ===================== -->
 
         <section id="videos-section">
-    <h2>Meus Vídeos</h2>
+    <h2>Assista Também</h2>
     <div id="videos-container" class="videos-container">
         <!-- Cards serão gerados pelo JS -->
     </div>
