--- a/espaco.html
+++ b/espaco.html
@@ -9,101 +9,10 @@
   </title>
   <meta content="Ciência News: Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos." name="description"/>
   <link href="https://canalciencianews.github.io/" rel="canonical"/>
+  
   <!-- Schema.org -->
-  <!-- Bootstrap Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet"/>
-  <link href="videos.css" rel="stylesheet"/>
-  <!-- CSS Principal -->
-  <link href="style.css" rel="stylesheet"/>
-  <!-- JS Principal -->
- </head>
- <body>
-  <!-- Header -->
-  <header>
-   <div class="container-header">
-    <div class="logo">
-     <img alt="Ciência News" src="logo.jpg" style="height: 50px;"/>
-    </div>
-    <div class="menu-toggle" id="menu-toggle">
-     <span>
-     </span>
-     <span>
-     </span>
-     <span>
-     </span>
-    </div>
-    <nav>
-     <ul class="menu" id="menu">
-      <li>
-       <a href="index.html">
-        Home
-       </a>
-      </li>
-      <li>
-       <a href="pesquisa.html">
-        Pesquisa
-       </a>
-      </li>
-      <li>
-       <a href="tecnologia.html">
-        Tecnologia
-       </a>
-      </li>
-      <li>
-       <a href="espaco.html">
-        Espaço
-       </a>
-      </li>
-      <li>
-       <a href="contato.html">
-        Contato
-       </a>
-      </li>
-     </ul>
-    </nav>
-   </div>
-  </header>
-  <!-- Main -->
-  <main>
-  </main>
-  <!-- Footer -->
-  <footer>
-   <div class="social-icons">
-    <a href="https://www.youtube.com/@CienciaNewsOficial" target="_blank">
-     <i class="bi bi-youtube">
-     </i>
-    </a>
-    <a href="https://www.facebook.com/ciencianews1" target="_blank">
-     <i class="bi bi-facebook">
-     </i>
-    </a>
-    <a href="https://www.instagram.com/ciencianews1" target="_blank">
-     <i class="bi bi-instagram">
-     </i>
-    </a>
-    <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&amp;_r=1" target="_blank">
-     <i class="bi bi-tiktok">
-     </i>
-    </a>
-   </div>
-   <div class="links-footer">
-    <a href="#">
-     Política de Privacidade
-    </a>
-    <a href="#">
-     Termos de Uso
-    </a>
-    <a href="#">
-     Contato
-    </a>
-   </div>
-   <div class="copyright">
-    © 2025 Ciência News | Proprietário: Juliano Cangussu
-   </div>
-  </footer>
-  <!-- Scripts -->
-  <script type="application/ld+json">
-   {
+    <script type="application/ld+json">
+    {
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Ciência News",
@@ -117,10 +26,68 @@
         "https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1"
       ]
     }
-  </script>
-  <script defer="" src="script.js">
-  </script>
-  <script src="videos.js">
-  </script>
+    </script>
+  
+  
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet"/>
+  <link href="videos.css" rel="stylesheet"/>
+  <!-- CSS Principal -->
+  <link href="style.css" rel="stylesheet"/>
+  <!-- JS Principal -->
+ </head>
+ <body>
+  
+  <!-- ===================== HEADER ===================== -->
+    <header>
+        <div class="container-header">
+            <div class="logo">
+                <img src="logo.jpg" alt="Ciência News" style="height: 50px;">
+            </div>
+            <div class="menu-toggle" id="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav>
+                <ul class="menu" id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pesquisa.html">Pesquisa</a></li>
+                    <li><a href="tecnologia.html">Tecnologia</a></li>
+                    <li><a href="espaco.html">Espaço</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+  
+ <!-- ===================== HERO ===================== -->
+    <section class="hero">
+        <h1>Ciência News</h1>
+        <p class="bordao">Uma pílula com notícias sobre ciências</p>
+    </section>
+
+    <!-- ===================== MAIN ===================== -->
+  <main>
+  </main>
+ 
+  <!-- ===================== RODAPÉ ===================== -->
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.youtube.com/@CienciaNewsOficial" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.facebook.com/ciencianews1" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/ciencianews1" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" target="_blank"><i class="bi bi-tiktok"></i></a>
+        </div>
+        <div class="links-footer">
+            <a href="#">Política de Privacidade</a>
+            <a href="#">Termos de Uso</a>
+            <a href="#">Contato</a>
+        </div>
+        <div class="copyright">
+            &copy; 2025 Ciência News | Proprietário: Juliano Cangussu
+        </div>
+    </footer>
  </body>
 </html>
+
