--- a/contato.html
+++ b/contato.html
@@ -60,8 +60,14 @@
             </nav>
         </div>
     </header>
-  
-  <!-- Main -->
+
+  <!-- ===================== HERO ===================== -->
+    <section class="hero">
+        <h1>Ciência News</h1>
+        <p class="bordao">Uma pílula com notícias sobre ciências</p>
+    </section>
+
+    <!-- ===================== MAIN ===================== -->
   <main>
    
    <!-- ===================== SOBRE FULL WIDTH ===================== -->
@@ -98,4 +104,5 @@
     </footer>
  </body>
 </html>
+
 
