--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Ciência News</title>
     <meta name="description" content="Ciência News: Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos.">
     <link rel="canonical" href="https://canalciencianews.github.io/">
+    
+    <!-- Favicon -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Schema.org -->
     <script type="application/ld+json">
