--- a/cacadores-cosmicos.html
+++ b/cacadores-cosmicos.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Cientistas usam galáxias distantes para tentar detectar partículas de matéria escura, abrindo novas perspectivas sobre o universo.">
   
   <!-- Favicon -->
-  <link rel="icon" href="logo.jpg" type="image/jpeg">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
