--- a/espaco.html
+++ b/espaco.html
@@ -9,6 +9,8 @@
   </title>
   <meta content="Ciência News: Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos." name="description"/>
   <link href="https://canalciencianews.github.io/" rel="canonical"/>
+  <!-- Favicon -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
   
   <!-- Schema.org -->
     <script type="application/ld+json">
@@ -90,4 +92,5 @@
     </footer>
  </body>
 </html>
+
 
