--- a/ferramentas-antigas.html
+++ b/ferramentas-antigas.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Ferramentas de pedra de 400 mil anos encontradas no Quênia revelam engenhosidade dos primeiros humanos.">
   
   <!-- Favicon -->
-  <link rel="icon" href="https://canalciencianews.github.io/logo.png" type="image/png">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
