--- a/nova-categoria-de-super-novas.html
+++ b/nova-categoria-de-super-novas.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Pesquisadores identificam uma nova categoria de supernovas que podem lançar luz sobre a evolução de estrelas massivas.">
 
   <!-- Favicon -->
-  <link rel="icon" href="logo.jpg" type="image/jpeg">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
