--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,8 @@
   <link href="videos.css" rel="stylesheet"/>
   <!-- CSS Principal -->
   <link href="style.css" rel="stylesheet"/>
-  <!-- JS Principal -->
+      <!-- JS Principal -->
+    <script src="script.js" defer></script>
  </head>
  <body>
   
@@ -94,6 +95,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
