--- a/espaco.html
+++ b/espaco.html
@@ -71,8 +71,42 @@
     </section>
 
     <!-- ===================== MAIN ===================== -->
-  <main>
-  </main>
+  <main class="p-6 bg-gray-50">
+  <!-- Imagem destaque -->
+  <section class="mb-10">
+    <img src="https://images.unsplash.com/photo-1580428180134-724aa9dfbda1" alt="Galáxia no espaço profundo" class="rounded-2xl shadow-lg w-full">
+    <p class="text-gray-700 text-sm mt-2">Uma galáxia distante capturada pelo telescópio James Webb.</p>
+  </section>
+
+  <!-- Notícias espaciais -->
+  <section class="mb-10">
+    <h2 class="text-2xl font-bold text-purple-700 mb-4">Últimas Missões</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <article class="bg-white p-5 rounded-2xl shadow">
+        <h3 class="font-semibold">Missão Artemis</h3>
+        <p class="text-sm text-gray-600">NASA prepara retorno de humanos à Lua em breve.</p>
+      </article>
+      <article class="bg-white p-5 rounded-2xl shadow">
+        <h3 class="font-semibold">SpaceX Starship</h3>
+        <p class="text-sm text-gray-600">Novo foguete para viagens interplanetárias em testes.</p>
+      </article>
+      <article class="bg-white p-5 rounded-2xl shadow">
+        <h3 class="font-semibold">Telescópio James Webb</h3>
+        <p class="text-sm text-gray-600">Imagens revolucionárias do universo primitivo.</p>
+      </article>
+    </div>
+  </section>
+
+  <!-- Curiosidades -->
+  <section>
+    <h2 class="text-2xl font-bold text-purple-700 mb-4">Você sabia?</h2>
+    <ul class="space-y-3">
+      <li class="bg-white p-4 rounded-xl shadow">Júpiter é tão grande que caberiam 1300 Terras dentro dele.</li>
+      <li class="bg-white p-4 rounded-xl shadow">Um dia em Vênus é mais longo que um ano em Vênus.</li>
+      <li class="bg-white p-4 rounded-xl shadow">Neutrinos atravessam seu corpo trilhões de vezes por segundo.</li>
+    </ul>
+  </section>
+                                                                                                     </main>
  
   <!-- ===================== RODAPÉ ===================== -->
     <footer>
@@ -93,6 +127,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
