--- a/espaco.html
+++ b/espaco.html
@@ -36,6 +36,8 @@
   <link href="videos.css" rel="stylesheet"/>
   <!-- CSS Principal -->
   <link href="style.css" rel="stylesheet"/>
+  <!--Tailwind-->
+  <script src="https://cdn.tailwindcss.com"></script>
       <!-- JS Principal -->
     <script src="script.js" defer></script>
  </head>
@@ -127,6 +129,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
