--- a/tecnologia.html
+++ b/tecnologia.html
@@ -36,6 +36,8 @@
   <link href="videos.css" rel="stylesheet"/>
   <!-- CSS Principal -->
   <link href="style.css" rel="stylesheet"/>
+  <!--Tailwind-->
+  <script src="https://cdn.tailwindcss.com"></script>
       <!-- JS Principal -->
     <script src="script.js" defer></script>
  </head>
@@ -72,8 +74,49 @@
     </section>
 
     <!-- ===================== MAIN ===================== -->
-  <main>
-  </main>
+  <main class="p-6 bg-gray-50">
+  <!-- Novidades -->
+  <section class="mb-10">
+    <h2 class="text-2xl font-bold text-green-700 mb-4">Inovações Recentes</h2>
+    <div class="grid md:grid-cols-2 gap-6">
+      <article class="bg-white p-5 rounded-2xl shadow">
+        <h3 class="font-semibold text-lg">Inteligência Artificial</h3>
+        <p class="text-sm text-gray-600">Redes neurais simulam funcionamento do cérebro humano.</p>
+      </article>
+      <article class="bg-white p-5 rounded-2xl shadow">
+        <h3 class="font-semibold text-lg">Carros Elétricos</h3>
+        <p class="text-sm text-gray-600">Autonomia maior e baterias mais sustentáveis no mercado.</p>
+      </article>
+    </div>
+  </section>
+
+  <!-- Comparação -->
+  <section>
+    <h2 class="text-2xl font-bold text-green-700 mb-4">Antes e Depois</h2>
+    <table class="w-full bg-white rounded-2xl shadow overflow-hidden">
+      <thead class="bg-green-100">
+        <tr>
+          <th class="p-3 text-left">Tecnologia Antiga</th>
+          <th class="p-3 text-left">Tecnologia Atual</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="border-t">
+          <td class="p-3">Telefone fixo</td>
+          <td class="p-3">Smartphone</td>
+        </tr>
+        <tr class="border-t">
+          <td class="p-3">Disquete</td>
+          <td class="p-3">Armazenamento em nuvem</td>
+        </tr>
+        <tr class="border-t">
+          <td class="p-3">Mapas de papel</td>
+          <td class="p-3">GPS e aplicativos</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+ </main>
   
   <!-- ===================== RODAPÉ ===================== -->
     <footer>
@@ -94,6 +137,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
