--- a/pesquisa.html
+++ b/pesquisa.html
@@ -35,6 +35,9 @@
   <link href="videos.css" rel="stylesheet"/>
   <!-- CSS Principal -->
   <link href="style.css" rel="stylesheet"/>
+  <!--Tailwind-->
+  <script src="https://cdn.tailwindcss.com"></script>
+ 
   <!-- JS Principal -->
   <script defer="" src="script.js">
   </script>
@@ -71,8 +74,42 @@
     </section>
 
     <!-- ===================== MAIN ===================== -->
-  <main>
-  </main>
+  <main class="p-6 bg-gray-50">
+  <!-- Destaques -->
+  <section class="mb-10">
+    <h2 class="text-2xl font-bold text-blue-700 mb-4">Descobertas Recentes</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <article class="bg-white p-4 rounded-2xl shadow">
+        <h3 class="font-semibold text-lg">Vacina inovadora</h3>
+        <p class="text-sm text-gray-600">Pesquisadores testam vacina promissora contra novos vírus respiratórios.</p>
+      </article>
+      <article class="bg-white p-4 rounded-2xl shadow">
+        <h3 class="font-semibold text-lg">Energia limpa</h3>
+        <p class="text-sm text-gray-600">Avanços em fusão nuclear trazem esperança de energia ilimitada.</p>
+      </article>
+      <article class="bg-white p-4 rounded-2xl shadow">
+        <h3 class="font-semibold text-lg">Genética</h3>
+        <p class="text-sm text-gray-600">Edição de genes CRISPR abre novas portas na medicina personalizada.</p>
+      </article>
+    </div>
+  </section>
+
+  <!-- Linha do tempo -->
+  <section>
+    <h2 class="text-2xl font-bold text-blue-700 mb-4">Linha do Tempo da Ciência</h2>
+    <ul class="space-y-3">
+      <li class="bg-white p-4 rounded-xl shadow">
+        <strong>1665</strong> – Robert Hooke publica "Micrographia".
+      </li>
+      <li class="bg-white p-4 rounded-xl shadow">
+        <strong>1928</strong> – Alexander Fleming descobre a penicilina.
+      </li>
+      <li class="bg-white p-4 rounded-xl shadow">
+        <strong>2012</strong> – Descoberta do bóson de Higgs.
+      </li>
+    </ul>
+  </section>
+ </main>
   
    <!-- ===================== RODAPÉ ===================== -->
     <footer>
@@ -94,5 +131,6 @@
   
  </body>
 </html>
+
 
 
