--- a/espaco.html
+++ b/espaco.html
@@ -76,8 +76,8 @@
   <main class="p-6 bg-gray-50">
   <!-- Imagem destaque -->
   <section class="mb-10">
-    <img src="https://images.unsplash.com/photo-1580428180134-724aa9dfbda1" alt="Galáxia no espaço profundo" class="rounded-2xl shadow-lg w-full">
-    <p class="text-gray-700 text-sm mt-2">Uma galáxia distante capturada pelo telescópio James Webb.</p>
+  <img src="https://i.postimg.cc/wBBMdJ6w/iss072e978997orig.jpg" alt="Fotografia da Lua e da atmosfera terrestre vista da Estação Espacial Internacional" class="rounded-2xl shadow-lg w-full">
+  <p class="text-gray-700 text-sm mt-2">A Lua iluminando o horizonte terrestre, com as camadas da atmosfera em destaque, registradas pela Estação Espacial Internacional.</p>
   </section>
 
   <!-- Notícias espaciais -->
@@ -129,6 +129,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
